File structure refactoring
Reordeded the files and for image assets and updated all paths

--- a/root/home.html
+++ b/root/home.html
@@ -11,19 +11,19 @@
     <title>Document</title>
 </head>
 <body>
-    <img id="site-logo" src="images/site-logo.png">
+    <img id="site-logo" src="images/decorations/site-logo.svg">
     <div id="nav-wrapper">
         <nav class="mobile-collapsed">
             <a class="category-label" class="category-label-active">
-                <img src="images/geometry-triangle.svg">
+                <img src="images/icons/geometry.svg">
                 <p>Geometry</p>
             </a>
             <a class="category-label">
-                <img src="images/rendering-monitor.svg">
+                <img src="images/icons/rendering.svg">
                 <p>Rendering</p>
             </a>
             <a class="category-label">
-                <img src="images/numerical-image.svg">
+                <img src="images/icons/numerical-analysis.svg">
                 <p>Numerical Analysis</p>
             </a>
             <a class="category-label">
@@ -31,13 +31,13 @@
             </a>
         </nav>
         <div id="nav-pull-tab">
-            <img src="images/hamburger-menu.svg">
+            <img src="images/icons/hamburger.svg">
         </div>
     </div> 
     <main>
         <div class="tool-info-wrapper">
             <div class="title-ribbon">
-                <img src="images/ribbon.svg">
+                <img src="images/decorations/ribbon-left.svg">
                 <h2>Lagrange Interpolating Polynomial</h2>
             </div>
             <div class="tool-content-wrapper">
@@ -55,7 +55,7 @@
                 </div>
                 <a href="/numerical-analysis/lagrange-polynomial.html" class="goto-tool-button">
                     Explore Lagrange Polynomials
-                    <img src="/images/pointing-edge-right.svg">
+                    <img src="/images/decorations/pointing-edge-right.svg">
                 </a>
             </div>
         </div>
