--- a/root/numerical-analysis/lagrange-polynomial.html
+++ b/root/numerical-analysis/lagrange-polynomial.html
@@ -15,7 +15,7 @@
             <nav>
                 <a href="/home.html">
                     <div class="tab">
-                        <img src="/images/home.svg">
+                        <img src="/images/icons/home.svg">
                     </div>
                 </a>
             </nav>
@@ -23,35 +23,35 @@
                 <div id="settings-tab" class="hidden">
                     <h2>Step Complexity</h2>
                     <div class="boolean-field field">
-                        <img src="/images/placeholder.png">
+                        <img src="/images/icons/home.svg">
                         <p>Show Variable Placement</p>
                     </div>
                     <div class="boolean-field field">
-                        <img src="/images/placeholder.png">
+                        <img src="/images/icons/home.svg">
                         <p>Show Term Simplification</p>
                     </div>
                     <h2>Output Panes</h2>
                     <div class="boolean-field field">
-                        <img src="/images/placeholder.png">
+                        <img src="/images/icons/home.svg">
                         <p>Show Graph</p>
                     </div>
                     <div class="boolean-field field">
-                        <img src="/images/placeholder.png">
+                        <img src="/images/icons/home.svg">
                         <p>Show Blackboard</p>
                     </div>
                 </div>
                 <div class="tab">
-                    <img src="/images/placeholder.png">
+                    <img src="/images/icons/home.svg">
                 </div>
             </div>
             <div class="pull-out-menu">
                 <div class="tab">
-                    <img src="/images/formulas-book.svg">
+                    <img src="/images/icons/formulas.svg">
                 </div>
             </div>
         </div>
         <div id="title-ribbon">
-            <img src="/images/ribbon.svg">
+            <img src="/images/decorations/ribbon-left.svg">
             <h2>Lagrange Interpolating Polynomial</h2>
         </div>
         <div class="pane" id="input-fields">
@@ -71,16 +71,16 @@
         </div>
         <div id="timeline-controls">
             <div class="timeline-button" id="step-start">
-                <img src="/images/step-start.png">
+                <img src="/images/visual-tool/step-start.svg">
             </div>
             <div class="timeline-button" id="step-back">
-                <img src="/images/step-back.png">
+                <img src="/images/visual-tool/step-back.svg">
             </div>
             <div class="timeline-button" id="step-forward">
-                <img src="/images/step-forward.png">
+                <img src="/images/visual-tool/step-forward.svg">
             </div>
             <div class="timeline-button" id="step-finish">
-                <img src="/images/step-end.png">
+                <img src="/images/visual-tool/step-end.svg">
             </div>
         </div>
     </main>
