--- a/root/home.html
+++ b/root/home.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img id="site-logo" src="images/decorations/site-logo.svg">
+   <div class="site-logo"><img id="site-logo" src="images/decorations/site-logo.svg"></div>
     <div id="nav-wrapper">
         <nav class="mobile-collapsed">
             <a href="#geometry-start" class="category-label label-active" id="geometry-tab">
