Reorganizing lagrange page
Started changing the css layout so that scaling up will make the text and fields bigger, but the graph smaller

--- a/root/numerical-analysis/lagrange-polynomial.html
+++ b/root/numerical-analysis/lagrange-polynomial.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/styles/visualization-tool.css">
     <script src="/scripts/globals/polyfill.js"></script>
     <script src="/scripts/globals/core.js"></script>
-    <title>Document</title>
+    <title>Lagrange Polynomial</title>
 </head>
 <body>
     <main>
@@ -20,7 +20,7 @@
                 </a>
             </nav>
             <div class="pull-out-menu">
-                <div id="settings-tab" class="hidden">
+                <div id="settings-content" class="top hidden">
                     <h2>Step Complexity</h2>
                     <div class="boolean-field field">
                         <img src="/images/icons/home.svg">
@@ -40,7 +40,7 @@
                         <p>Show Blackboard</p>
                     </div>
                 </div>
-                <div class="tab">
+                <div class="tab" id="settings-tab">
                     <img src="/images/icons/home.svg">
                 </div>
             </div>
