Updated Styling Colors and Mobile Layouts
Mobile layouts are now differentiated using a media query for both pages.

--- a/root/home.html
+++ b/root/home.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/images/icons/favicon.png">
     <link rel="stylesheet" type="text/css" href="styles/general.css">
     <link rel="stylesheet" type="text/css" href="styles/equation.css">
     <link rel="stylesheet" type="text/css" href="styles/home.css">
     <script src="scripts/globals/polyfill.js"></script>
     <script src="scripts/globals/core.js"></script>
-    <title>Document</title>
+    <title>Math Vision > Home</title>
 </head>
 <body>
-   <div class="site-logo"><img id="site-logo" src="images/decorations/site-logo.svg"></div>
+    <div class="site-logo"><img id="site-logo" src="images/decorations/site-logo.svg"></div>
     <div id="nav-wrapper">
         <nav class="mobile-collapsed">
             <a href="#geometry-start" class="category-label label-active" id="geometry-tab">
