--- a/root/numerical-analysis/lagrange-polynomial.html
+++ b/root/numerical-analysis/lagrange-polynomial.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/styles/general.css">
     <link rel="stylesheet" type="text/css" href="/styles/visualization-tool.css">
+    <link rel="icon" type="image/png" href="/images/icons/favicon.png">
     <script src="/scripts/globals/polyfill.js"></script>
     <script src="/scripts/globals/core.js"></script>
-    <title>Lagrange Polynomial</title>
+    <script src="/scripts/globals/file-helper.js"></script>
+    <title>Math Vision > Lagrange Polynomial</title>
 </head>
 <body>
     <main>
@@ -23,25 +25,25 @@
                 <div id="settings-content" class="top hidden">
                     <h2>Step Complexity</h2>
                     <div class="boolean-field field">
-                        <img src="/images/icons/home.svg">
+                        <input type="checkbox" id="scales" name="scales" checked>
                         <p>Show Variable Placement</p>
                     </div>
                     <div class="boolean-field field">
-                        <img src="/images/icons/home.svg">
+                        <input type="checkbox" id="scales" name="scales" checked>
                         <p>Show Term Simplification</p>
                     </div>
                     <h2>Output Panes</h2>
                     <div class="boolean-field field">
-                        <img src="/images/icons/home.svg">
+                        <input type="checkbox" id="scales" name="scales" checked>
                         <p>Show Graph</p>
                     </div>
                     <div class="boolean-field field">
-                        <img src="/images/icons/home.svg">
+                        <input type="checkbox" id="scales" name="scales" checked>
                         <p>Show Blackboard</p>
                     </div>
                 </div>
                 <div class="tab" id="settings-tab">
-                    <img src="/images/icons/home.svg">
+                    <img id="settings-icon" src="/images/icons/gear-off.svg">
                 </div>
             </div>
             <div class="pull-out-menu">
@@ -84,6 +86,7 @@
             </div>
         </div>
     </main>
+    <script src="/scripts/instance-objects/on-off-icon.js"></script>
     <script src="/scripts/instance-objects/graph-output.js"></script>
     <script src="/scripts/page-logic/lagrange-polynomial.js"></script>
 </body>
