Styling updates and about page linked
Styling updates for the homepage and HTML writtenfor the about page.

--- a/root/home.html
+++ b/root/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/images/icons/favicon.png">
+    <link rel="icon" type="image/svg" href="images/icons/favicon.svg">
     <link rel="stylesheet" type="text/css" href="styles/general.css">
     <link rel="stylesheet" type="text/css" href="styles/equation.css">
     <link rel="stylesheet" type="text/css" href="styles/home.css">
@@ -27,7 +27,7 @@
                 <img src="images/icons/numerical-analysis.svg">
                 <p>Numerical Analysis</p>
             </a>
-            <a class="category-label">
+            <a href="about.html" class="category-label">
                 <p>About this Project</p>
             </a>
         </nav>
